# k8s-tools

./: .coverage  .gitignore  README.md
.buddy/: todos
.buddy/indexes/backups/store/: root.bolt
.buddy/indexes/database/store/: root.bolt
.buddy/indexes/history/store/: 000000000002.zap  root.bolt
.buddy/indexes/knowledge/store/: root.bolt
.buddy/indexes/rules/store/: root.bolt
.buddy/indexes/todos/store/: root.bolt
.cursor/rules/: python.mdc
etcdBackup/: README.md  create_projecct.go  go.mod  go.sum  main.go  permissions.go  pods.go  pv.go  pvc.go  utils.go
k8s_install_scripts/: kubeadmcfg.conf  post-install-setup.sh
mcp-server/: config.yaml  kubernetes-mcp-server.service  start-mcp-server.sh
openshift-related/: .flake8  Makefile
openshift-related/installation-helpers/: README.md  baremetal-bmc-secret.yaml  baremetal-host-template.j2  baremetal-host-vars.yaml  baremetal-hosts-config-generator.yaml  install-config-template.j2  install-vars.yaml  install_config_generator.yaml  set_htpasswd_provider.sh
openshift-related/preflight/: bastion_disk_space_check.yaml  bastion_proxy_test.yaml  bastion_pull_from_quay.yaml  check_blockdev_space.yaml  dns_checks.yaml  drac_dns_check.yaml  drac_nic_check.yaml  drac_test_mount_iso.yaml  get-interfaces.yaml  get_interfaces.yaml  inventory  requirements.txt  set_hwclock.ymal  test.yaml  vars.yaml
openshift-related/replace_control_plane/: CODE_REVIEW_PLAN.md  CONTEXT7_UPDATED_MACHINE_CONSOLIDATION.md  MANIFEST.in  Makefile  README.md  TEST_CONFIDENCE_SUMMARY.md  TEST_ORCHESTRATOR_ANALYSIS_PLAN.md  pyproject.toml  replace_control_plane.py  replace_control_plane_modular.py  setup.py
openshift-related/replace_control_plane/modules/: __init__.py  arguments_parser.py  backup_manager.py  configuration_manager.py  etcd_manager.py  node_configurator.py  orchestrator.py  print_manager.py  resource_manager.py  resource_monitor.py  utilities.py
openshift-related/replace_control_plane/scripts/: build_monolith.py
openshift-related/replace_control_plane/tests/: Makefile  README.md  __init__.py  conftest.py  requirements.txt  test_backup_manager.py  test_configuration_manager.py  test_etcd_manager.py  test_functional_use_cases.py  test_integration_workflows.py  test_node_configurator.py  test_orchestrator.py  test_resource_manager.py  test_resource_monitor_bmh_monitoring.py  test_resource_monitor_machine_discovery.py  test_resource_monitor_main_loop.py  test_utilities.py
openshift-related/replace_control_plane/tests/Docs/: QUALITATIVE_IMPROVEMENTS_ANALYSIS.md  QUANTITATIVE_METRICS_REPORT.md  TEST_NODE_CONFIGURATOR_MIGRATION_GUIDE.md  test_backup_manager_documentation.md  test_configuration_manager_documentation.md  test_etcd_manager_documentation.md  test_node_configurator_documentation.md  test_orchestrator_documentation.md  test_resource_manager_documentation.md  test_resource_monitor_bmh_monitoring_documentation.md  test_resource_monitor_machine_discovery_documentation.md  test_resource_monitor_main_loop_documentation.md
pullSecretUser/: go.mod  go.sum  main.go
serviceAccount_Secrets/: go.mod  main.go
watchResource/: main.go
